# Wellbeing_lahacls

./: README.md  WellbeingApp.swift  pyvenv.cfg
Models/: Models.swift  Stressor.swift
Services/: FetchAiServ.swift  HealthDataFetcher.swift  WellbeingStore.swift
Views/: ContentView.swift
Views/Components/: AddEntryView.swift  EditEntryView.swift  EntryDetailView.swift  EntryRowView.swift  FetchAiStressView.swift  JournalListView.swift  MainTabViewWithFetchAi.swift  StressorsView.swift  fetchaiStressors.swift
Wellbeing_lahacls/: ContentView.swift  Persistence.swift  Wellbeing_lahaclsApp.swift
Wellbeing_lahacls.xcodeproj/: project.pbxproj
Wellbeing_lahacls.xcodeproj/xcuserdata/oscarcs.xcuserdatad/xcschemes/: xcschememanagement.plist
Wellbeing_lahacls/Wellbeing_lahacls.xcdatamodeld/: .xccurrentversion
Wellbeing_lahaclsTests/: Wellbeing_lahaclsTests.swift
Wellbeing_lahaclsUITests/: Wellbeing_lahaclsUITests.swift  Wellbeing_lahaclsUITestsLaunchTests.swift
env/: .gitignore  pyvenv.cfg
wellbeing-fetchai-backend/: app.py  client_agent.py  data_collection_agent.py  exampleAgents.py  fetch_agents.py  pattern_analysis_agent.py  private_keys.json  pyproject.toml  reccomendation_agent.py  tempCodeRunnerFile.py
wellbeing-fetchai-backend/env/: pyvenv.cfg
