[project]
name = "wellbeing-fetchai-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Oscar Cooper Stern",email = "oscarcs@g.ucla.edu"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
